--- a/style.css
+++ b/style.css
@@ -19,8 +19,18 @@ body{
     background-position: center; 
     background-repeat: no-repeat; 
     background-attachment: fixed;
+    min-height: 100vh; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-
+.container {
+    min-height: 100vh; /* Fill the entire viewport */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+}
 /*  */
 .btn{
     font-family: inherit;
