--- a/style.css
+++ b/style.css
@@ -1,8 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap');
 
-*{
-
-}
+*
 :root{
     --tenne-tawny: #d65108;
     --tenne-tawny-dark: #b54507;
