--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap');
 
-*
+* 
+{  
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
 :root{
     --tenne-tawny: #d65108;
     --tenne-tawny-dark: #b54507;
