--- a/style.css
+++ b/style.css
@@ -52,7 +52,10 @@ body{
     max-width: 1280px;
     margin: 0 auto;
     padding: 2rem;
+    background: rgba(255, 255, 255, 0.7);
     text-align: center;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    border-radius: 1rem;
 }
 .meal-search{
     margin: 2rem 0;
