--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ body{
     max-width: 1280px;
     margin: 0 auto;
     padding: 2rem;
-    background: #ff;
+    background: #ffffff;
     text-align: center;
     
 }
