--- a/style.css
+++ b/style.css
@@ -46,13 +46,16 @@ body{
     margin-bottom: 1rem;
 }
 
+/*  */
+.container{
+    min-height: 100vh;
 
 }
 .meal-wrapper{
     max-width: 1280px;
     margin: 0 auto;
     padding: 2rem;
-    background: #ffffff;
+    background: #fff;
     text-align: center;
     
 }
