--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body{
     font-weight: 300;
     font-size: 1.05rem;
     line-height: 1.6;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Times New Roman', sans-serif;
     background-image: url('https://blog.epicured.com/wp-content/uploads/2023/11/3-Low-FODMAP-Life-Hacks-Blog-Hero-Image.png');
     background-size: cover; 
     background-position: center; 
