--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ body{
     max-width: 1280px;
     margin: 0 auto;
     padding: 2rem;
-    background: #FFFD D0;
+    background: #fff;
     text-align: center;
     box-shadow: 0 4px 15px rgba(255, 255, 153, 0.2); 
     border-radius: 1rem;
