--- a/style.css
+++ b/style.css
@@ -295,9 +295,9 @@ body{
 footer {
   text-align: center;
   padding: 20px;
-  background-color: #f1f1f1; /* Light grey background */
+  background-color: #f1f1f1; 
   margin-top: 20px;
-  border-top: 2px solid #ccc; /* Optional border on top */
+  border-top: 2px solid #ccc; 
 }
 
 footer p {
@@ -305,7 +305,11 @@ footer p {
   font-size: 1rem;
   color: #333; 
 }
-
+footer p {
+    margin: 5px 0;
+    font-size: 1rem;
+    color: #333;
+}
 
 
 /* Media Queries */
